[FIX] pos: payment screen on tablet
Before this commit, the payment screen on a normal 10.1" tablet (lenovo YogaPad3)
in full screen mode )GMD Full Screen Imersive Mode) was forced to be scrolled
by the operator with only two different payment methods. Furthermore the min high
of the payment amount was already too big for this typical screen.

Now, only after adding the third payment method, scrolling is needed. The numpad
doen't jump niether while the missing amount is shown.

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -208,7 +208,7 @@ td {
 }
 /* firefox seems to ignore the relative positionning of the subwindow-container
  * putting this inside subwindow-container fixes it.
- */ 
+ */
 .pos .subwindow .subwindow-container-fix{
     height: 100%;
     position: relative;
@@ -335,7 +335,7 @@ td {
     margin-left: 7px;
     margin-top: 2px;
     vertical-align:middle;
-} 
+}
 .pos .pos-branding .username{
     float:right;
     color:#DDD;
@@ -481,7 +481,7 @@ td {
 /*  c) The notifications indicator */
 
 .pos .oe_status{
-    float:right; 
+    float:right;
     color: rgba(255,255,255,0.4);
     padding: 14px;
     line-height: 20px;
@@ -602,7 +602,7 @@ td {
 .pos .control-button.highlight,
 .pos .button.highlight {
     background: #6EC89B !important;
-    border: solid 1px #64AF8A !important; 
+    border: solid 1px #64AF8A !important;
     color: white !important;
 }
 .pos .control-button.altlight,
@@ -1002,7 +1002,7 @@ td {
     line-height: 14px;
     width: 100%;
     /* for some reason the -90deg orientation doesn't match the -webkit-linear-gradient. It should be 180deg here.
-     * webkit also insists on rendering *both* gradients instead of only the native one. So it doesn't looks right. ugh. 
+     * webkit also insists on rendering *both* gradients instead of only the native one. So it doesn't looks right. ugh.
     background:         linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1)); */
     /*background:#FFF;*/
     padding: 3px;
@@ -1275,7 +1275,7 @@ td {
     padding: 16px;
     padding-top: 0;
     border-bottom: dashed 1px gainsboro;
-    min-height: 154px;
+    min-height:140px;
 }
 
 .pos .paymentlines {
@@ -1293,7 +1293,7 @@ td {
     border-radius: 3px;
 }
 .pos .paymentline{
-    font-size: 22px;
+    font-size: 20px;
 }
 .pos .paymentline.selected {
     font-size: 22px;
@@ -1309,7 +1309,7 @@ td {
     border-radius: 3px;
 }
 .pos .paymentline > *{
-    padding: 8px 12px;
+    padding: 5px 12px;
 }
 .pos .paymentline .col-due,
 .pos .paymentline .col-tendered,
@@ -1398,7 +1398,7 @@ td {
 }
 .payment-screen .paymentlines-empty .total {
     text-align: center;
-    padding: 24px 0px 18px;
+    padding: 18px 0px 18px;
     font-size: 64px;
     color: #43996E;
     text-shadow: 0px 2px white, 0px 2px 2px rgba(0, 0, 0, 0.27);
@@ -1473,8 +1473,8 @@ td {
     }
     .oe_leftbar,
     .oe_loading,
-    .pos .pos-topheader, 
-    .pos .pos-leftpane, 
+    .pos .pos-topheader,
+    .pos .pos-leftpane,
     .pos .keyboard_frame,
     .pos .receipt-screen header,
     .pos .receipt-screen .top-content,
@@ -1484,9 +1484,9 @@ td {
     .pos,
     .pos .pos-content,
     .pos .rightpane,
-    .pos .screen, 
-    .pos .window, 
-    .pos .window .subwindow, 
+    .pos .screen,
+    .pos .window,
+    .pos .window .subwindow,
     .pos .subwindow .subwindow-container{
         display: block;
         position: static;
@@ -2043,7 +2043,7 @@ td {
     top: 10px;
     width: 200px;
     font-size: 10px;
-    
+
     background: rgba(0,0,0,0.82);
     color: white;
     padding-bottom: 10px;
@@ -2274,7 +2274,7 @@ td {
     line-height: 50px;
     margin-top: -1px;
     border-top: solid 3px #6EC89B;
-    
+
 }
 .pos .popup.popup-selection .selection-item {
     width: auto;
